--- a/index.html
+++ b/index.html
@@ -10,47 +10,8 @@
     <link rel="stylesheet" href="assets/fontawesome-free-5.15.3-web/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body class="d-flex flex-column h-100">
-    
-    <header class="px-3 py-2 bg-dark text-white">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <p class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                    <i class="bi bi-box me-2"></i>
-                </p>
-                <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
-                    <li>
-                        <a href="/login" class="nav-link text-white page-not-logged-in">
-                            <i class="bi bi-door-open d-block mb-1 text-center"></i>
-                            Login
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/register" class="nav-link text-muted page-not-logged-in">
-                            <i class="bi bi-person-plus-fill d-block mb-1 text-center"></i>
-                            Cadastro
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </header>
-
-    <main class="container" id="content">
-        <div class="lds-ring mt-5 mx-auto">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </main>
-
-    <footer class="footer mt-auto py-3 bg-light">
-        <div class="container">
-            <span class="text-muted">Project by Charles © <span id="yearNow">--</span></span>
-        </div>
-    </footer>
-
+<body class="h-100">
+    <main class="d-flex flex-column h-100"></main>
     <script type="text/javascript" src="assets/bootstrap-5.0.0-beta3-dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/jquery/jquery-3.6.0.min.js"></script>
     <script type="module" src="assets/js/script.js"></script>
