--- a/pages/login.html
+++ b/pages/login.html
@@ -2,15 +2,15 @@
     <div class="col-lg">
         <h3 class="mt-5">Login</h3>
         <hr/>
-        <form>
+        <form id="formRegister">
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Seu Email</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 <div id="emailHelp" class="form-text">Digite um email válido.</div>
             </div>
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Sua senha</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" required>
+                <input type="password" class="form-control" id="exampleInputPassword1">
             </div>
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
