--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="h-100">
     <main class="d-flex flex-column h-100"></main>
-    <script type="text/javascript" src="assets/bootstrap-5.0.0-beta3-dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/bootstrap-5.0.0-beta3-dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="assets/jquery/jquery-3.6.0.min.js"></script>
     <script type="module" src="assets/js/script.js"></script>
 </body>
