--- a/logged.html
+++ b/logged.html
@@ -29,13 +29,13 @@
     <div class="container-fluid">
         <ul class="nav col-12 col-lg-auto my-2 justify-content-center mx-auto my-md-0 text-small">
             <li>
-                <a href="/home" class="nav-link text-white page-logged">
+                <a href="/home" class="nav-link text-white page-logged" id="pageHome">
                     <i class="bi bi-house d-block mb-1 text-center"></i>
                     Home
                 </a>
             </li>
             <li>
-                <a href="/menu" class="nav-link text-muted page-logged">
+                <a href="/menu" class="nav-link text-muted page-logged" id="pageMenu">
                     <i class="bi bi-app d-block mb-1 text-center"></i>
                     Menu
                 </a>
