--- a/logged.html
+++ b/logged.html
@@ -41,15 +41,15 @@
                 </a>
             </li>
             <li>
-                <a href="/menu" class="nav-link text-muted page-logged">
+                <a href="/error" class="nav-link text-muted page-logged">
                     <i class="bi bi-app d-block mb-1 text-center"></i>
-                    Menu
+                    Not found
                 </a>
             </li>
             <li>
-                <a href="/menu" class="nav-link text-muted page-logged">
+                <a href="/error" class="nav-link text-muted page-logged">
                     <i class="bi bi-app d-block mb-1 text-center"></i>
-                    Menu
+                    Not found
                 </a>
             </li>
         </ul>
