--- a/logged.html
+++ b/logged.html
@@ -65,7 +65,7 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<a href="/logout" class="btn btn-secondary link-logged" data-bs-dismiss="modal"><i class="bi bi-door-closed"></i> Sair</a>
+				<a href="/logout" class="btn btn-secondary link-logged"><i class="bi bi-door-closed"></i> Sair</a>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
