--- a/logged.html
+++ b/logged.html
@@ -3,8 +3,27 @@
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <p class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
                 <i class="bi bi-person me-2"></i>
+                Charles
             </p>
             <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+                <li>
+                    <p class="nav-link text-white text-center" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="bottom" title="Partes">
+                        <i class="bi bi-puzzle-fill d-block mb-1 text-center"></i>
+                        999.999
+                    </p>
+                </li>
+                <li>
+                    <a href="/more-gems" class="nav-link text-white text-center link-logged" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="bottom" title="Gemas">
+                        <i class="bi bi-gem d-block mb-1 text-center"></i>
+                        <i class="bi bi-plus"></i> 999.999
+                    </a>
+                </li>
+                <li>
+                    <a href="more-coins" class="nav-link text-white text-center link-logged" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="bottom" title="Moedas">
+                        <i class="bi bi-server d-block mb-1 text-center"></i>
+                        <i class="bi bi-plus"></i> 999.999
+                    </a>
+                </li>
                 <li>
                     <a class="nav-link text-muted" href="#" data-bs-toggle="modal" data-bs-target="#modalConfiguration">
                         <i class="bi bi-gear d-block mb-1 text-center"></i>
