--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,41 @@
-<div class="row">
-    <div class="col-md-12 mt-5 text-center">
-        <h1>Home</h1>
+<div class="row bg-gray">
+    <div class="col-md-12 mb-5 pb-5">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="d-block w-100 bg-gray image-carousel"></div>
+                    <div class="carousel-caption d-md-block text-dark mb-5 pb-5">
+                        <h1>Battle PvP</h1>
+                        <p>A new battle player versus player</p>
+                        <button type="button" class="btn btn-secondary btn-lg">Go to battle</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="d-block w-100 bg-gray image-carousel"></div>
+                    <div class="carousel-caption d-md-block text-dark mb-5 pb-5">
+                        <h5>Coming soon</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="d-block w-100 bg-gray image-carousel"></div>
+                    <div class="carousel-caption d-md-block text-dark mb-5 pb-5">
+                        <h5>Coming soon</h5>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </div>
 </div>
