--- a/logged.html
+++ b/logged.html
@@ -20,7 +20,7 @@
                 </li>
                 <li>
                     <a href="more-coins" class="nav-link text-white text-center link-logged" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="bottom" title="Moedas">
-                        <i class="bi bi-server d-block mb-1 text-center"></i>
+                        <i class="bi bi-bullseye d-block mb-1 text-center"></i>
                         <i class="bi bi-plus"></i> 999.999
                     </a>
                 </li>
@@ -99,6 +99,24 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title" id="exampleModalLabel">Profile</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- Modal Battle Pvp -->
+<div class="modal fade" id="modalBattlePvp" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+	<div class="modal-dialog modal-lg">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="exampleModalLabel">Battle PvP</h5>
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
