--- a/not-logged-in.html
+++ b/not-logged-in.html
@@ -22,7 +22,7 @@
     </div>
 </header>
 
-<div class="container" id="content">
+<div id="content">
     <div class="lds-ring mt-5 mx-auto">
         <div></div>
         <div></div>
