--- a/pages/home.html
+++ b/pages/home.html
@@ -12,7 +12,7 @@
                     <div class="carousel-caption d-md-block text-dark mb-5 pb-5">
                         <h1>Battle PvP</h1>
                         <p>A new battle player versus player</p>
-                        <button type="button" class="btn btn-secondary btn-lg">Go to battle</button>
+                        <button type="button" class="btn btn-secondary btn-lg" data-bs-toggle="modal" data-bs-target="#modalBattlePvp">Go to battle</button>
                     </div>
                 </div>
                 <div class="carousel-item">
