--- a/logged.html
+++ b/logged.html
@@ -54,9 +54,9 @@
                 </a>
             </li>
             <li>
-                <a href="/menu" class="nav-link text-muted page-logged" id="pageMenu">
-                    <i class="bi bi-app d-block mb-1 text-center"></i>
-                    Menu
+                <a href="/my-cards" class="nav-link text-muted page-logged" id="pageMenu">
+                    <i class="bi bi-file d-block mb-1 text-center"></i>
+                    My cards
                 </a>
             </li>
             <li>
@@ -94,7 +94,7 @@
 </div>
 
 <!-- Modal Profile -->
-<div class="modal fade" id="modalProfile" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="modalProfile" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
 	<div class="modal-dialog modal-lg">
 		<div class="modal-content">
 			<div class="modal-header">
@@ -102,7 +102,33 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				
+				<ul class="list-group mb-5">
+                    <li class="list-group-item active d-flex justify-content-between align-items-center">
+                        Battles PvP
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        Total battles
+                        <span class="badge bg-primary rounded-pill">0</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        Total battles win
+                        <span class="badge bg-primary rounded-pill">2</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        Total battles defeat
+                        <span class="badge bg-primary rounded-pill">1</span>
+                    </li>
+                </ul>
+
+                <ul class="list-group mb-5">
+                    <li class="list-group-item active d-flex justify-content-between align-items-center">
+                        Cards
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        Total cards
+                        <span class="badge bg-primary rounded-pill">0</span>
+                    </li>
+                </ul>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
@@ -120,7 +146,7 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				
+				<button type="button" class="btn btn-primary btn-lg d-block mt-3 mb-3 mx-auto"><i class="bi bi-search"></i> Search opponent</button>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
