--- a/pages/my-cards.html
+++ b/pages/my-cards.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12 mt-5 text-center">
-            <h1>Menu</h1>
+            <h1>My cards</h1>
         </div>
     </div>
 </div>
