--- a/logged.html
+++ b/logged.html
@@ -54,7 +54,7 @@
                 </a>
             </li>
             <li>
-                <a href="/my-cards" class="nav-link text-muted page-logged" id="pageMenu">
+                <a href="/my-cards" class="nav-link text-muted page-logged" id="pageMy-cards">
                     <i class="bi bi-file d-block mb-1 text-center"></i>
                     My cards
                 </a>
