--- a/pages/my-cards.html
+++ b/pages/my-cards.html
@@ -1,7 +1,56 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-12 mt-5 text-center">
-            <h1>My cards</h1>
+        <div class="col-lg mt-5 mb-5 pb-5">
+            <h3>My cards</h3>
+            <button type="button" class="btn btn-secondary btn-block w-100">Click to edit your deck</button>
+            <hr>
+            <div class="row row-cols-1 row-cols-md-4 g-4 mb-5">
+                <div class="col">
+                    <div class="card h-100">
+                        <div class="card-img-top d-block w-100 bg-gray image-card"></div>
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <div class="card-img-top d-block w-100 bg-gray image-card"></div>
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a short card.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <div class="card-img-top d-block w-100 bg-gray image-card"></div>
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <div class="card-img-top d-block w-100 bg-gray image-card"></div>
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <div class="card-img-top d-block w-100 bg-gray image-card"></div>
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
