--- a/logged.html
+++ b/logged.html
@@ -19,15 +19,15 @@
                     </a>
                 </li>
                 <li>
-                    <a href="more-coins" class="nav-link text-white text-center link-logged" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="bottom" title="Moedas">
+                    <a href="/more-coins" class="nav-link text-white text-center link-logged" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="bottom" title="Moedas">
                         <i class="bi bi-bullseye d-block mb-1 text-center"></i>
                         <i class="bi bi-plus"></i> 999.999
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link text-muted" href="#" data-bs-toggle="modal" data-bs-target="#modalConfiguration">
+                    <a class="nav-link text-muted" href="#" data-bs-toggle="modal" data-bs-target="#modalOptions">
                         <i class="bi bi-gear d-block mb-1 text-center"></i>
-                        Configuração
+                        Options
                     </a>
                 </li>
             </ul>
@@ -75,19 +75,19 @@
     </div>
 </nav>
 
-<!-- Modal Configuration -->
-<div class="modal fade" id="modalConfiguration" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- Modal Options -->
+<div class="modal fade" id="modalOptions" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-lg">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalLabel">Configuração</h5>
+				<h5 class="modal-title" id="exampleModalLabel">Options</h5>
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<a href="/logout" class="btn btn-secondary link-logged"><i class="bi bi-door-closed"></i> Sair</a>
+				<a href="/logout" class="btn btn-secondary link-logged"><i class="bi bi-door-closed"></i> Logout</a>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 			</div>
 		</div>
 	</div>
@@ -131,7 +131,7 @@
                 </ul>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 			</div>
 		</div>
 	</div>
@@ -149,7 +149,7 @@
 				<button type="button" class="btn btn-primary btn-lg d-block mt-3 mb-3 mx-auto"><i class="bi bi-search"></i> Search opponent</button>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 			</div>
 		</div>
 	</div>
