--- a/not-logged-in.html
+++ b/not-logged-in.html
@@ -14,7 +14,7 @@
                 <li>
                     <a href="/register" class="nav-link text-muted page-not-logged-in" id="pageRegister">
                         <i class="bi bi-person-plus-fill d-block mb-1 text-center"></i>
-                        Cadastro
+                        Register
                     </a>
                 </li>
             </ul>
