--- a/pages/register.html
+++ b/pages/register.html
@@ -1,29 +1,28 @@
 <div class="container">
     <div class="row">
         <div class="col-lg">
-            <h3 class="mt-5">Cadastro</h3>
+            <h3 class="mt-5">Register</h3>
             <hr>
             <form class="row">
                 <div class="col-md-12 mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email</label>
+                    <label for="exampleInputEmail1" class="form-label">E-mail</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
-                    <div id="emailHelp" class="form-text">Digite um email válido.</div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Senha</label>
+                    <label for="exampleInputPassword1" class="form-label">Password</label>
                     <input type="password" class="form-control" id="exampleInputPassword1" required>
-                    <div id="emailHelp" class="form-text">A senha deve conter no mínimo 6 caracteres</div>
+                    <div id="emailHelp" class="form-text">The password must contain at least 6 characters</div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <label for="exampleInputPassword2" class="form-label">Confirme a Senha</label>
+                    <label for="exampleInputPassword2" class="form-label">Confirm password</label>
                     <input type="password" class="form-control" id="exampleInputPassword2" required>
                 </div>
                 <div class="col-md-12 mb-3">
                     <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
-                    <label class="form-check-label" for="exampleCheck1">Aceitar termos de uso e regras</label>
+                    <label class="form-check-label" for="exampleCheck1">Accept terms of use and rules</label>
                 </div>
                 <div class="col-md-12 mb-3">
-                    <button type="submit" class="btn btn-primary">Cadastrar</button>
+                    <button type="submit" class="btn btn-primary">Register</button>
                 </div>
             </form>
         </div>
