--- a/logged.html
+++ b/logged.html
@@ -60,9 +60,9 @@
                 </a>
             </li>
             <li>
-                <a href="/error" class="nav-link text-muted page-logged">
-                    <i class="bi bi-app d-block mb-1 text-center"></i>
-                    Not found
+                <a href="/ranking" class="nav-link text-muted page-logged">
+                    <i class="bi bi-award d-block mb-1 text-center"></i>
+                    Ranking
                 </a>
             </li>
             <li>
