--- a/pages/home.html
+++ b/pages/home.html
@@ -1,4 +1,4 @@
-<div class="row bg-gray">
+<div class="row">
     <div class="col-md-12 mb-5 pb-5">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false">
             <div class="carousel-indicators">
@@ -8,7 +8,7 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <div class="d-block w-100 bg-gray image-carousel"></div>
+                    <div class="d-block w-100 image-carousel"></div>
                     <div class="carousel-caption d-md-block text-dark mb-5 pb-5">
                         <h1>Battle PvP</h1>
                         <p>A new battle player versus player</p>
@@ -16,13 +16,13 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="d-block w-100 bg-gray image-carousel"></div>
+                    <div class="d-block w-100 image-carousel"></div>
                     <div class="carousel-caption d-md-block text-dark mb-5 pb-5">
                         <h5>Coming soon</h5>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="d-block w-100 bg-gray image-carousel"></div>
+                    <div class="d-block w-100 image-carousel"></div>
                     <div class="carousel-caption d-md-block text-dark mb-5 pb-5">
                         <h5>Coming soon</h5>
                     </div>
