--- a/logged.html
+++ b/logged.html
@@ -60,7 +60,7 @@
                 </a>
             </li>
             <li>
-                <a href="/ranking" class="nav-link text-muted page-logged">
+                <a href="/ranking" class="nav-link text-muted page-logged" id="pageRanking">
                     <i class="bi bi-award d-block mb-1 text-center"></i>
                     Ranking
                 </a>
