--- a/pages/ranking.html
+++ b/pages/ranking.html
@@ -3,6 +3,38 @@
         <div class="col-lg mt-5 mb-5 pb-5">
             <h3>Ranking</h3>
             <hr>
+            <div class="table-responsive mb-5">
+                <table class="table align-middle">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">User</th>
+                            <th scope="col">Points</th>
+                            <th scope="col">Division</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td><i class="bi bi-person me-2 fs-1 align-middle"></i> Nickname</td>
+                            <td>1.000</td>
+                            <td>Bronze</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">2</th>
+                            <td><i class="bi bi-person me-2 fs-1 align-middle"></i> Nickname</td>
+                            <td>1.000</td>
+                            <td>Bronze</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td><i class="bi bi-person me-2 fs-1 align-middle"></i> Nickname</td>
+                            <td>1.000</td>
+                            <td>Bronze</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
