--- a/pages/ranking.html
+++ b/pages/ranking.html
@@ -3,37 +3,58 @@
         <div class="col-lg mt-5 mb-5 pb-5">
             <h3>Ranking</h3>
             <hr>
-            <div class="table-responsive mb-5">
-                <table class="table align-middle">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">User</th>
-                            <th scope="col">Points</th>
-                            <th scope="col">Division</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td><i class="bi bi-person me-2 fs-1 align-middle"></i> Nickname</td>
-                            <td>1.000</td>
-                            <td>Bronze</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td><i class="bi bi-person me-2 fs-1 align-middle"></i> Nickname</td>
-                            <td>1.000</td>
-                            <td>Bronze</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td><i class="bi bi-person me-2 fs-1 align-middle"></i> Nickname</td>
-                            <td>1.000</td>
-                            <td>Bronze</td>
-                        </tr>
-                    </tbody>
-                </table>
+            <ul class="nav nav-pills nav-fill mb-3" id="pills-tab" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link active" id="pills-top-players-tab" data-bs-toggle="pill" data-bs-target="#pills-top-players" type="button" role="tab" aria-controls="pills-top-players" aria-selected="true">Top Players</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="pills-achievements-tab" data-bs-toggle="pill" data-bs-target="#pills-achievements" type="button" role="tab" aria-controls="pills-achievements" aria-selected="false">Achievements</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="pills-pass-tab" data-bs-toggle="pill" data-bs-target="#pills-pass" type="button" role="tab" aria-controls="pills-pass" aria-selected="false">A pass</button>
+                </li>
+            </ul>
+            <div class="tab-content" id="pills-tabContent">
+                <div class="tab-pane fade show active" id="pills-top-players" role="tabpanel" aria-labelledby="pills-top-players-tab">
+                    <div class="table-responsive mb-5">
+                        <table class="table align-middle">
+                            <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">User</th>
+                                    <th scope="col">Points</th>
+                                    <th scope="col">Division</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td><i class="bi bi-person me-2 fs-1 align-middle"></i> Nickname</td>
+                                    <td>1.000</td>
+                                    <td>Bronze</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">2</th>
+                                    <td><i class="bi bi-person me-2 fs-1 align-middle"></i> Nickname</td>
+                                    <td>1.000</td>
+                                    <td>Bronze</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">3</th>
+                                    <td><i class="bi bi-person me-2 fs-1 align-middle"></i> Nickname</td>
+                                    <td>1.000</td>
+                                    <td>Bronze</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="pills-achievements" role="tabpanel" aria-labelledby="pills-achievements-tab">
+                    <p>Coming soon</p>
+                </div>
+                <div class="tab-pane fade" id="pills-pass" role="tabpanel" aria-labelledby="pills-pass-tab">
+                    <p>Coming soon</p>
+                </div>
             </div>
         </div>
     </div>
