--- a/logged.html
+++ b/logged.html
@@ -1,4 +1,46 @@
-<header class="px-3 py-2 bg-dark text-white">
+<nav class="navbar navbar-expand-lg navbar-dark px-3 py-2 bg-dark text-white">
+	<div class="container">
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse align-items-center justify-content-center" id="navbarTogglerDemo01">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start w-100">
+                <a class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#modalProfile">
+                    <i class="bi bi-person me-2"></i>
+                    Charles
+                </a>
+                <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+                    <li>
+                        <p class="nav-link text-white text-center" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="bottom" title="Partes">
+                            <i class="bi bi-puzzle-fill d-block mb-1 text-center"></i>
+                            999.999
+                        </p>
+                    </li>
+                    <li>
+                        <a href="/more-gems" class="nav-link text-white text-center link-logged" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="bottom" title="Gemas">
+                            <i class="bi bi-gem d-block mb-1 text-center"></i>
+                            <i class="bi bi-plus"></i> 999.999
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/more-coins" class="nav-link text-white text-center link-logged" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="bottom" title="Moedas">
+                            <i class="bi bi-bullseye d-block mb-1 text-center"></i>
+                            <i class="bi bi-plus"></i> 999.999
+                        </a>
+                    </li>
+                    <li>
+                        <a class="nav-link text-muted" href="#" data-bs-toggle="modal" data-bs-target="#modalOptions">
+                            <i class="bi bi-gear d-block mb-1 text-center"></i>
+                            Options
+                        </a>
+                    </li>
+                </ul>
+            </div>
+		</div>
+	</div>
+</nav>
+
+<!-- <header class="px-3 py-2 bg-dark text-white">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <a class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#modalProfile">
@@ -33,7 +75,7 @@
             </ul>
         </div>
     </div>
-</header>
+</header> -->
 
 <div id="content">
     <div class="lds-ring mt-5 mx-auto">
@@ -44,28 +86,28 @@
     </div>
 </div>
 
-<nav class="navbar fixed-bottom navbar-light bg-light bg-dark text-white">
+<nav class="navbar fixed-bottom navbar-dark bg-dark text-white">
     <div class="container-fluid">
-        <ul class="nav col-12 col-lg-auto my-2 justify-content-center mx-auto my-md-0 text-small">
-            <li>
+        <ul class="nav col-12 col-xs-auto my-2 justify-content-center mx-auto my-md-0 text-small text-center">
+            <li class="col-3">
                 <a href="/home" class="nav-link text-white page-logged" id="pageHome">
                     <i class="bi bi-house d-block mb-1 text-center"></i>
                     Home
                 </a>
             </li>
-            <li>
+            <li class="col-3">
                 <a href="/my-cards" class="nav-link text-muted page-logged" id="pageMy-cards">
                     <i class="bi bi-file d-block mb-1 text-center"></i>
                     My cards
                 </a>
             </li>
-            <li>
+            <li class="col-3">
                 <a href="/ranking" class="nav-link text-muted page-logged" id="pageRanking">
                     <i class="bi bi-award d-block mb-1 text-center"></i>
                     Ranking
                 </a>
             </li>
-            <li>
+            <li class="col-3">
                 <a href="/error" class="nav-link text-muted page-logged">
                     <i class="bi bi-app d-block mb-1 text-center"></i>
                     Not found
