--- a/pages/ranking.html
+++ b/pages/ranking.html
@@ -15,8 +15,8 @@
                 </li>
             </ul>
             <div class="tab-content" id="pills-tabContent">
-                <div class="tab-pane fade show active" id="pills-top-players" role="tabpanel" aria-labelledby="pills-top-players-tab">
-                    <div class="table-responsive mb-5">
+                <div class="tab-pane mb-5 fade show active" id="pills-top-players" role="tabpanel" aria-labelledby="pills-top-players-tab">
+                    <div class="table-responsive">
                         <table class="table align-middle">
                             <thead>
                                 <tr>
@@ -35,6 +35,18 @@
                                 </tr>
                                 <tr>
                                     <th scope="row">2</th>
+                                    <td><i class="bi bi-person me-2 fs-1 align-middle"></i> Nickname</td>
+                                    <td>1.000</td>
+                                    <td>Bronze</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">3</th>
+                                    <td><i class="bi bi-person me-2 fs-1 align-middle"></i> Nickname</td>
+                                    <td>1.000</td>
+                                    <td>Bronze</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">3</th>
                                     <td><i class="bi bi-person me-2 fs-1 align-middle"></i> Nickname</td>
                                     <td>1.000</td>
                                     <td>Bronze</td>
