--- a/logged.html
+++ b/logged.html
@@ -40,51 +40,7 @@
 	</div>
 </nav>
 
-<!-- <header class="px-3 py-2 bg-dark text-white">
-    <div class="container">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#modalProfile">
-                <i class="bi bi-person me-2"></i>
-                Charles
-            </a>
-            <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
-                <li>
-                    <p class="nav-link text-white text-center" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="bottom" title="Partes">
-                        <i class="bi bi-puzzle-fill d-block mb-1 text-center"></i>
-                        999.999
-                    </p>
-                </li>
-                <li>
-                    <a href="/more-gems" class="nav-link text-white text-center link-logged" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="bottom" title="Gemas">
-                        <i class="bi bi-gem d-block mb-1 text-center"></i>
-                        <i class="bi bi-plus"></i> 999.999
-                    </a>
-                </li>
-                <li>
-                    <a href="/more-coins" class="nav-link text-white text-center link-logged" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="bottom" title="Moedas">
-                        <i class="bi bi-bullseye d-block mb-1 text-center"></i>
-                        <i class="bi bi-plus"></i> 999.999
-                    </a>
-                </li>
-                <li>
-                    <a class="nav-link text-muted" href="#" data-bs-toggle="modal" data-bs-target="#modalOptions">
-                        <i class="bi bi-gear d-block mb-1 text-center"></i>
-                        Options
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</header> -->
-
-<div id="content">
-    <div class="lds-ring mt-5 mx-auto">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
-</div>
+<div id="content"></div>
 
 <nav class="navbar fixed-bottom navbar-dark bg-dark text-white">
     <div class="container-fluid">
