--- a/not-logged-in.html
+++ b/not-logged-in.html
@@ -22,14 +22,7 @@
     </div>
 </header>
 
-<div id="content">
-    <div class="lds-ring mt-5 mx-auto">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
-</div>
+<div id="content"></div>
 
 <footer class="footer mt-auto py-3 bg-light">
     <div class="container">
