--- a/logged.html
+++ b/logged.html
@@ -46,27 +46,27 @@
     <div class="container-fluid">
         <ul class="nav col-12 col-xs-auto my-2 justify-content-center mx-auto my-md-0 text-small text-center">
             <li class="col-3">
-                <a href="/home" class="nav-link text-white page-logged" id="pageHome">
+                <a href="/home" class="nav-link text-white page-logged" id="page-home">
                     <i class="bi bi-house d-block mb-1 text-center"></i>
                     Home
                 </a>
             </li>
             <li class="col-3">
-                <a href="/my-cards" class="nav-link text-muted page-logged" id="pageMy-cards">
+                <a href="/my-cards" class="nav-link text-muted page-logged" id="page-my-cards">
                     <i class="bi bi-file d-block mb-1 text-center"></i>
                     My cards
                 </a>
             </li>
             <li class="col-3">
-                <a href="/ranking" class="nav-link text-muted page-logged" id="pageRanking">
+                <a href="/ranking" class="nav-link text-muted page-logged" id="page-ranking">
                     <i class="bi bi-award d-block mb-1 text-center"></i>
                     Ranking
                 </a>
             </li>
             <li class="col-3">
-                <a href="/error" class="nav-link text-muted page-logged">
+                <a href="/store" class="nav-link text-muted page-logged" id="page-store">
                     <i class="bi bi-app d-block mb-1 text-center"></i>
-                    Not found
+                    Store
                 </a>
             </li>
         </ul>
