--- a/logged.html
+++ b/logged.html
@@ -65,7 +65,7 @@
             </li>
             <li class="col-3">
                 <a href="/store" class="nav-link text-muted page-logged" id="page-store">
-                    <i class="bi bi-app d-block mb-1 text-center"></i>
+                    <i class="bi bi-shop-window d-block mb-1 text-center"></i>
                     Store
                 </a>
             </li>
