--- a/logged.html
+++ b/logged.html
@@ -80,7 +80,7 @@
 		<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 	</div>
 	<div class="offcanvas-body">
-	    <a href="/logout" class="btn btn-secondary link-logged" data-bs-dismiss="offcanvas"><i class="bi bi-door-closed"></i> Logout</a>
+	    <a href="/logout" class="btn btn-secondary link-logged"><i class="bi bi-door-closed"></i> Logout</a>
 	</div>
 </div>
 
